# ATIPI

./: .gitignore  ATIPI - Pruebas de compresión.xlsx  CMakeLists.txt  Datos de grupo.txt  Doxyfile  Intro.md  LOCO.csv  README.md  Visualizaciones.ipynb  preguntas_para_alvaro.md
docs/: annotated.html  class_colour_image-members.html  class_colour_image.html  class_context_sign_matrix-members.html  class_context_sign_matrix.html  class_context_table-members.html  class_context_table.html  class_grey_image-members.html  class_grey_image.html  class_greyimage.html  class_invalid_dimensions_exception-members.html  class_invalid_dimensions_exception.html  class_invalid_image_format_exception-members.html  class_invalid_image_format_exception.html  class_invalid_pixel_position_exception-members.html  class_invalid_pixel_position_exception.html  classes.html  colour__image_8h.html  colour__image_8h_source.html  context__sign__matrix_8h.html  context__sign__matrix_8h_source.html  decompressor_8h.html  decompressor_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  error__calculator_8h.html  error__calculator_8h_source.html  file__handler_8h_source.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  golomb__encoder_8h.html  golomb__encoder_8h_source.html  grey__image_8h.html  grey__image_8h_source.html  (+16 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+8 more)
encoding/: compressor.cpp
include/: colour_image.h  context_sign_matrix.h  decompressor.h  error_calculator.h  file_handler.h  golomb_encoder.h  gray_image.h  grey_image.h  local_context.h  med_predictor.h
inputs/: kodim20.pgm
scripts/: ubuntu_compressor.bash
src/: CMakeLists.txt  colour_image.cc  context_sign_matrix.cc  decompressor.c  decompressor.cc  error_calculator.cc  file_handler.cc  golomb_encoder.cc  gray_image.cc  grey_image.cc  local_context.cc  main.cc  med_predictor.cc
test/Imagenes-LOCO-PGM+PPM/: INSTRUCCIONES.txt  baloons.pgm  baloons.ppm  faxballsL.pgm  kodim07.pgm  kodim07.ppm  kodim20.ppm  kodim24.pgm  kodim24.ppm  tools.pgm
